--- a/code-editor.html
+++ b/code-editor.html
@@ -10,167 +10,163 @@
       color: #fff;
       font-family: monospace;
     }
-
-    .tab-bar {
-      display: flex;
-      gap: 10px;
+    header {
       background: #222;
       padding: 10px;
-      justify-content: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-
-    .tab-bar button {
-      background: #333;
-      color: #fff;
+    header h2 {
+      margin: 0;
+      color: #0ff;
+    }
+    header button {
+      margin-left: 10px;
+      padding: 6px 12px;
+      background: #0ff;
       border: none;
-      padding: 8px 16px;
+      color: #000;
+      font-weight: bold;
       border-radius: 6px;
       cursor: pointer;
     }
-
-    .tab-bar button:hover {
-      background: #555;
-    }
-
-    .editor {
-      width: 100%;
-      height: 200px;
-      background: #000;
+    textarea {
+      width: 33.33%;
+      height: 80vh;
+      background: #222;
       color: #0f0;
       border: none;
       padding: 10px;
-      font-family: monospace;
-      font-size: 14px;
-      box-sizing: border-box;
-      resize: vertical;
-      display: none;
+      resize: none;
     }
-
     iframe {
       width: 100%;
-      height: 250px;
-      border: 2px solid #555;
-      background: #fff;
-    }
-
-    .controls {
-      margin-top: 10px;
-      padding: 10px;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    input, select, button {
-      padding: 6px 12px;
-      font-size: 14px;
-      border-radius: 5px;
+      height: 100%;
       border: none;
-      background: #222;
-      color: white;
+      background: white;
     }
-
-    button:hover {
-      background: #444;
+    .editor {
+      display: flex;
+    }
+    .preview {
+      height: 20vh;
     }
   </style>
 </head>
 <body>
 
-  <div class="tab-bar">
-    <button onclick="switchTab('html')">HTML</button>
-    <button onclick="switchTab('css')">CSS</button>
-    <button onclick="switchTab('js')">JS</button>
+<header>
+  <h2>Zodex Forge Editor</h2>
+  <div>
+    <button onclick="exportProject()">Export</button>
+    <button onclick="goHome()">My Projects</button>
   </div>
+</header>
 
-  <textarea id="htmlTab" class="editor" placeholder="Write HTML..."></textarea>
-  <textarea id="cssTab" class="editor" placeholder="Write CSS..."></textarea>
-  <textarea id="jsTab" class="editor" placeholder="Write JS..."></textarea>
+<div class="editor">
+  <textarea id="html" placeholder="HTML Code"></textarea>
+  <textarea id="css" placeholder="CSS Code"></textarea>
+  <textarea id="js" placeholder="JS Code"></textarea>
+</div>
 
+<div class="preview">
   <iframe id="preview"></iframe>
+</div>
 
-  <div class="controls">
-    <input type="text" id="fileName" placeholder="File name" />
-    <select id="format">
-      <option value="html">.html</option>
-      <option value="css">.css</option>
-      <option value="js">.js</option>
-      <option value="txt">.txt</option>
-    </select>
-    <button id="downloadBtn">Export</button>
-  </div>
+<script>
+  const htmlInput = document.getElementById("html");
+  const cssInput = document.getElementById("css");
+  const jsInput = document.getElementById("js");
+  const preview = document.getElementById("preview");
 
-  <script>
-    const htmlTab = document.getElementById("htmlTab");
-    const cssTab = document.getElementById("cssTab");
-    const jsTab = document.getElementById("jsTab");
-    const preview = document.getElementById("preview");
-    const editors = { html: htmlTab, css: cssTab, js: jsTab };
+  let projectId = null;
 
-    function switchTab(tab) {
-      for (let key in editors) {
-        editors[key].style.display = "none";
-      }
-      editors[tab].style.display = "block";
-    }
-
-    function updatePreview() {
-      const html = htmlTab.value;
-      const css = `<style>${cssTab.value}</style>`;
-      const js = `<script>${jsTab.value}<\/script>`;
-      preview.srcdoc = html + css + js;
-      autoSave();
-    }
-
-    function autoSave() {
-      const draft = {
-        html: htmlTab.value,
-        css: cssTab.value,
-        js: jsTab.value
-      };
-      localStorage.setItem("zodexDraft", JSON.stringify(draft));
-    }
-
-    function loadDraft() {
-      const draft = JSON.parse(localStorage.getItem("zodexDraft"));
-      if (draft) {
-        htmlTab.value = draft.html || "";
-        cssTab.value = draft.css || "";
-        jsTab.value = draft.js || "";
+  // Load project from query string
+  function getParams() {
+    const url = new URLSearchParams(window.location.search);
+    if (url.has("project")) {
+      projectId = url.get("project");
+      const allProjects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
+      const project = allProjects[projectId];
+      if (project) {
+        htmlInput.value = project.html;
+        cssInput.value = project.css;
+        jsInput.value = project.js;
         updatePreview();
       }
+    } else if (url.get("new") === "true") {
+      projectId = "project_" + Date.now();
+      saveProject(); // Initialize blank project
     }
+  }
 
-    document.querySelectorAll(".editor").forEach(el => {
-      el.addEventListener("input", updatePreview);
-    });
+  // Save project every 1.5 seconds
+  function autoSave() {
+    setInterval(() => {
+      if (!projectId) return;
+      const allProjects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
+      allProjects[projectId] = {
+        name: allProjects[projectId]?.name || prompt("Enter project name") || "Untitled",
+        html: htmlInput.value,
+        css: cssInput.value,
+        js: jsInput.value,
+        date: new Date().toLocaleDateString()
+      };
+      localStorage.setItem("zodexProjects", JSON.stringify(allProjects));
+    }, 1500);
+  }
 
-    document.getElementById("downloadBtn").addEventListener("click", () => {
-      const format = document.getElementById("format").value;
-      const fileName = document.getElementById("fileName").value.trim() || "project";
-      let content = "";
+  // Update live preview
+  function updatePreview() {
+    const html = htmlInput.value;
+    const css = `<style>${cssInput.value}</style>`;
+    const js = `<script>${jsInput.value}<\/script>`;
+    preview.srcdoc = `${html}${css}${js}`;
+  }
 
-      if (format === "html") {
-        content = htmlTab.value + `\n<style>${cssTab.value}</style>\n<script>${jsTab.value}<\/script>`;
-      } else if (format === "css") {
-        content = cssTab.value;
-      } else if (format === "js") {
-        content = jsTab.value;
-      } else {
-        content = htmlTab.value + "\n" + cssTab.value + "\n" + jsTab.value;
-      }
+  // Export project to .html
+  function exportProject() {
+    const fileContent = `
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>${projectId}</title>
+  <style>${cssInput.value}</style>
+</head>
+<body>
+${htmlInput.value}
+<script>${jsInput.value}<\/script>
+</body>
+</html>`.trim();
 
-      const blob = new Blob([content], { type: "text/plain" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = `${fileName}.${format}`;
-      link.click();
-    });
+    const blob = new Blob([fileContent], { type: "text/html" });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = `${projectId}.html`;
+    a.click();
 
-    // Start
-    switchTab("html");
-    loadDraft();
-  </script>
+    // After export, delete the project (fresh start)
+    const projects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
+    delete projects[projectId];
+    localStorage.setItem("zodexProjects", JSON.stringify(projects));
+    window.location.href = "code-project.html";
+  }
+
+  function goHome() {
+    window.location.href = "code-project.html";
+  }
+
+  // Live update
+  htmlInput.addEventListener("input", updatePreview);
+  cssInput.addEventListener("input", updatePreview);
+  jsInput.addEventListener("input", updatePreview);
+
+  getParams();
+  updatePreview();
+  autoSave();
+</script>
+
 </body>
 </html>
