--- a/code-editor.html
+++ b/code-editor.html
@@ -1,179 +1,224 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Zodex Forge - Code Editor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Zodex Editor – The Code Awakens</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      background: #0e0e0e;
-      color: #fff;
-      font-family: monospace;
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       height: 100vh;
+      background-color: #0f0f0f;
+      color: #fff;
     }
+
     header {
-      background: #111;
-      padding: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: #0ff;
-    }
-    header h2 {
-      margin: 0;
-      font-size: 18px;
-    }
-    header button {
-      margin-left: 10px;
-      padding: 6px 12px;
-      background: #0ff;
-      border: none;
-      color: #000;
+      padding: 12px;
+      background: #1e1e1e;
+      text-align: center;
+      font-size: 1.4em;
       font-weight: bold;
-      border-radius: 6px;
-      cursor: pointer;
+      border-bottom: 1px solid #444;
     }
-    .tab-buttons {
-      background: #1a1a1a;
+
+    .tabs {
       display: flex;
-      justify-content: center;
+      background-color: #1a1a1a;
+      border-bottom: 1px solid #333;
     }
-    .tab-buttons button {
-      flex: 1;
+
+    .tab {
+      padding: 10px 20px;
+      cursor: pointer;
       background: #1a1a1a;
-      color: white;
       border: none;
-      padding: 10px;
-      cursor: pointer;
+      color: #aaa;
+      font-weight: bold;
     }
-    .tab-buttons button.active {
-      background: #0ff;
-      color: #000;
+
+    .tab.active {
+      color: #fff;
+      background-color: #272727;
+      border-bottom: 3px solid #00d8ff;
     }
+
     .editor-container {
-      flex: 1;
       display: flex;
-      flex-direction: column;
-    }
-    .code-area {
       flex: 1;
-      display: none;
     }
+
     textarea {
       width: 100%;
       height: 100%;
-      background: #222;
+      resize: none;
+      padding: 10px;
+      font-family: monospace;
+      font-size: 1em;
+      background-color: #111;
       color: #0f0;
       border: none;
-      padding: 10px;
-      resize: none;
-      font-size: 14px;
+      outline: none;
     }
-    .preview {
-      height: 40vh;
-      background: white;
+
+    .code-section {
+      flex: 1;
+      display: none;
+      flex-direction: column;
     }
+
+    .code-section.active {
+      display: flex;
+    }
+
     iframe {
-      width: 100%;
+      flex: 1;
       height: 100%;
       border: none;
+      background: #fff;
     }
-    footer {
-      background: #111;
-      color: #0ff;
-      padding: 10px;
+
+    .preview {
+      flex: 1;
+      border-left: 2px solid #222;
+      background-color: #fff;
+    }
+
+    .bottom-bar {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      padding: 8px 16px;
+      background: #1a1a1a;
+      border-top: 1px solid #333;
+    }
+
+    .bottom-bar button {
+      padding: 8px 14px;
+      font-weight: bold;
+      background: #00d8ff;
+      color: #000;
+      border: none;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 8px;
+      background: #111;
+      color: #aaa;
+      font-size: 0.9em;
     }
   </style>
 </head>
-<body><header>
-  <h2>Zodex Editor – The Code Awakens</h2>
-  <div>
-    <button onclick="exportProject()">Export</button>
-    <button onclick="goHome()">My Projects</button>
-  </div>
-</header><div class="tab-buttons">
-  <button onclick="switchTab('html')" class="active">HTML</button>
-  <button onclick="switchTab('css')">CSS</button>
-  <button onclick="switchTab('js')">JS</button>
-</div><div class="editor-container">
-  <div class="code-area" id="htmlTab" style="display: block">
-    <textarea id="html" placeholder="HTML Code"></textarea>
-  </div>
-  <div class="code-area" id="cssTab">
-    <textarea id="css" placeholder="CSS Code"></textarea>
-  </div>
-  <div class="code-area" id="jsTab">
-    <textarea id="js" placeholder="JS Code"></textarea>
-  </div>
-</div><div class="preview">
-  <iframe id="preview"></iframe>
-</div><footer>
-  <span>Live Preview ⚡️</span>
-  <div>
-    <button onclick="exportProject()">Export</button>
-    <button onclick="goHome()">My Projects</button>
-  </div>
-</footer><script>
-  const htmlInput = document.getElementById("html");
-  const cssInput = document.getElementById("css");
-  const jsInput = document.getElementById("js");
-  const preview = document.getElementById("preview");
+<body>
+  <header>Zodex Editor – The Code Awakens</header>
 
-  let projectId = null;
+  <div class="tabs">
+    <button class="tab active" onclick="switchTab('html')">HTML</button>
+    <button class="tab" onclick="switchTab('css')">CSS</button>
+    <button class="tab" onclick="switchTab('js')">JS</button>
+  </div>
 
-  function getParams() {
-    const url = new URLSearchParams(window.location.search);
-    if (url.has("project")) {
-      projectId = url.get("project");
-      const allProjects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
-      const project = allProjects[projectId];
-      if (project) {
-        htmlInput.value = project.html;
-        cssInput.value = project.css;
-        jsInput.value = project.js;
-        updatePreview();
-      }
-    } else if (url.get("new") === "true") {
-      projectId = "project_" + Date.now();
-      saveProject();
+  <div class="editor-container">
+    <div class="code-section active" id="html">
+      <textarea id="htmlCode" placeholder="Write HTML..."></textarea>
+    </div>
+    <div class="code-section" id="css">
+      <textarea id="cssCode" placeholder="Write CSS..."></textarea>
+    </div>
+    <div class="code-section" id="js">
+      <textarea id="jsCode" placeholder="Write JS..."></textarea>
+    </div>
+    <div class="preview">
+      <iframe id="preview"></iframe>
+    </div>
+  </div>
+
+  <div class="bottom-bar">
+    <button onclick="exportCode()">Export</button>
+    <button onclick="goToProjects()">My Projects</button>
+  </div>
+
+  <footer>Live Preview ⚡️ by Zodex™</footer>
+
+  <script>
+    const tabs = document.querySelectorAll('.tab');
+    const sections = document.querySelectorAll('.code-section');
+    const htmlCode = document.getElementById("htmlCode");
+    const cssCode = document.getElementById("cssCode");
+    const jsCode = document.getElementById("jsCode");
+    const preview = document.getElementById("preview");
+
+    function switchTab(tabName) {
+      tabs.forEach(tab => tab.classList.remove("active"));
+      sections.forEach(sec => sec.classList.remove("active"));
+      document.getElementById(tabName).classList.add("active");
+      event.target.classList.add("active");
     }
-  }
 
-  function autoSave() {
+    function updatePreview() {
+      const html = htmlCode.value;
+      const css = "<style>" + cssCode.value + "</style>";
+      const js = "<script>" + jsCode.value + "<\/script>";
+      const full = html + css + js;
+      preview.srcdoc = full;
+    }
+
+    htmlCode.addEventListener("input", updatePreview);
+    cssCode.addEventListener("input", updatePreview);
+    jsCode.addEventListener("input", updatePreview);
+
+    // Auto-update preview on load
+    window.addEventListener("load", () => {
+      htmlCode.value = localStorage.getItem("html") || "";
+      cssCode.value = localStorage.getItem("css") || "";
+      jsCode.value = localStorage.getItem("js") || "";
+      updatePreview();
+    });
+
+    // Auto-save every 1 second
     setInterval(() => {
-      if (!projectId) return;
-      const allProjects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
-      allProjects[projectId] = {
-        name: allProjects[projectId]?.name || "Untitled",
-        html: htmlInput.value,
-        css: cssInput.value,
-        js: jsInput.value,
-        date: new Date().toLocaleDateString()
-      };
-      localStorage.setItem("zodexProjects", JSON.stringify(allProjects));
-    }, 1500);
-  }
+      localStorage.setItem("html", htmlCode.value);
+      localStorage.setItem("css", cssCode.value);
+      localStorage.setItem("js", jsCode.value);
+    }, 1000);
 
-  function updatePreview() {
-    const html = htmlInput.value;
-    const css = `<style>${cssInput.value}</style>`;const js = `<script>${jsInput.value}<\/script>`;
-preview.srcdoc = `${html}${css}${js}`;
+    function exportCode() {
+      const filename = prompt("Enter file name:", "my-file");
+      if (!filename) return;
 
-}
+      const blob = new Blob(
+        [htmlCode.value + "\n<style>" + cssCode.value + "</style>\n<script>" + jsCode.value + "</script>"],
+        { type: "text/html" }
+      );
 
-function exportProject() { const content = <!DOCTYPE html><html><head><meta charset='UTF-8'><style>${cssInput.value}</style></head><body>${htmlInput.value}<script>${jsInput.value}<\/script></body></html>; const blob = new Blob([content], { type: "text/html" }); const a = document.createElement("a"); a.href = URL.createObjectURL(blob); a.download = ${projectId}.html; a.click(); const projects = JSON.parse(localStorage.getItem("zodexProjects") || "{}"); delete projects[projectId]; localStorage.setItem("zodexProjects", JSON.stringify(projects)); goHome(); }
+      const a = document.createElement("a");
+      a.href = URL.createObjectURL(blob);
+      a.download = filename + ".html";
+      a.click();
 
-function goHome() { window.location.href = "code-project.html"; }
+      // Clear saved draft after export
+      localStorage.removeItem("html");
+      localStorage.removeItem("css");
+      localStorage.removeItem("js");
 
-function switchTab(tab) { document.querySelectorAll('.tab-buttons button').forEach(btn => btn.classList.remove('active')); document.querySelector(.tab-buttons button[onclick*="${tab}"]).classList.add('active'); document.querySelectorAll('.code-area').forEach(area => area.style.display = 'none'); document.getElementById(${tab}Tab).style.display = 'block'; }
+      // Reset editor
+      htmlCode.value = "";
+      cssCode.value = "";
+      jsCode.value = "";
+      updatePreview();
+    }
 
-htmlInput.addEventListener("input", updatePreview); cssInput.addEventListener("input", updatePreview); jsInput.addEventListener("input", updatePreview);
-
-getParams(); updatePreview(); autoSave(); </script>
-
+    function goToProjects() {
+      window.location.href = "code-project.html";
+    }
+  </script>
 </body>
 </html>
