--- a/code-project.html
+++ b/code-project.html
@@ -2,126 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Zodex Forge - Projects</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Projects – Zodex Editor</title>
   <style>
     body {
-      background: #111;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0f0f0f;
       color: #fff;
-      font-family: sans-serif;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      color: #0ff;
-    }
-
-    .project-grid {
       display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      margin-top: 20px;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
-    .project-card {
-      background: #222;
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 15px;
-      width: 220px;
+    header {
+      background-color: #1e1e1e;
+      padding: 16px;
+      font-size: 1.5em;
       text-align: center;
+      font-weight: bold;
     }
 
-    .project-card h3 {
+    ul {
+      list-style: none;
+      padding: 0;
       margin: 0;
-      font-size: 18px;
-      color: #0f0;
     }
 
-    .project-card small {
-      color: #888;
+    li {
+      background: #1a1a1a;
+      margin: 8px 16px;
+      padding: 14px;
+      border-radius: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .project-card button {
-      margin-top: 10px;
-      background: #333;
-      color: white;
-      border: none;
+    button {
       padding: 6px 12px;
+      border: none;
+      background-color: #00d8ff;
+      color: #000;
+      font-weight: bold;
       border-radius: 5px;
       cursor: pointer;
     }
 
-    .project-card button:hover {
-      background: #555;
-    }
-
-    .new-btn {
-      display: block;
-      margin: 0 auto;
-      background: #0ff;
-      color: #000;
-      font-weight: bold;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
+    footer {
+      margin-top: auto;
+      background-color: #111;
       text-align: center;
-    }
-
-    .new-btn:hover {
-      background: #0dd;
+      padding: 10px;
+      font-size: 0.9em;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
+  <header>🗂 My Projects</header>
 
-  <h1>🗂️ Your Projects</h1>
+  <ul id="projectList">
+    <!-- Saved projects will show here -->
+  </ul>
 
-  <a class="new-btn" href="code-editor.html?new=true">+ Create New Project</a>
-
-  <div class="project-grid" id="projectList"></div>
+  <footer>Saved with Zodex Editor ⚡</footer>
 
   <script>
+    // Only one draft for now: Default
+    const html = localStorage.getItem("html");
+    const css = localStorage.getItem("css");
+    const js = localStorage.getItem("js");
+
     const projectList = document.getElementById("projectList");
 
-    function loadProjects() {
-      const projects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
-      projectList.innerHTML = "";
-
-      Object.keys(projects).forEach(id => {
-        const project = projects[id];
-        const card = document.createElement("div");
-        card.className = "project-card";
-        card.innerHTML = `
-          <h3>${project.name}</h3>
-          <small>📅 ${project.date}</small><br/>
-          <button onclick="openProject('${id}')">Open</button>
-          <button onclick="deleteProject('${id}')">Delete</button>
-        `;
-        projectList.appendChild(card);
-      });
-
-      if (Object.keys(projects).length === 0) {
-        projectList.innerHTML = "<p style='text-align:center;'>No projects found.</p>";
-      }
+    if (html || css || js) {
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <div>
+          <strong>Zodex Forge Draft</strong><br>
+          Last saved: ${new Date().toLocaleString()}
+        </div>
+        <button onclick="loadDraft()">Open</button>
+      `;
+      projectList.appendChild(li);
+    } else {
+      const li = document.createElement("li");
+      li.innerHTML = `<div>No drafts found. Start building in the editor!</div>`;
+      projectList.appendChild(li);
     }
 
-    function openProject(id) {
-      // Redirect to editor with project ID
-      window.location.href = `code-editor.html?project=${id}`;
+    function loadDraft() {
+      window.location.href = "code-editor.html";
     }
-
-    function deleteProject(id) {
-      const projects = JSON.parse(localStorage.getItem("zodexProjects") || "{}");
-      delete projects[id];
-      localStorage.setItem("zodexProjects", JSON.stringify(projects));
-      loadProjects();
-    }
-
-    // Load all on startup
-    loadProjects();
   </script>
 </body>
 </html>
