--- a/builder.html
+++ b/builder.html
@@ -36,7 +36,7 @@
   <script>
     function openEditor(mode) {
   if (mode === 'code') {
-    window.location.href = 'code-project.html';
+    window.location.href = 'code-editor.html';
   } else if (mode === 'scratch') {
     window.location.href = 'scratch.html';
   } else if (mode === 'pwa') {
